manifests/portfolio-tls-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio
  namespace: profile
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`profile.curiouspace.com`)
      kind: Rule
      services:
        - name: portfolio
          port: 80
  tls:
    secretName: profile-tls
